--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -34,7 +34,7 @@
 	perhaps the most widely distributed GCJ-compiled program to date.
 	</td>
 	<td>
-	Submitted by <a href="mailto:taras.judge@shaw.ca">Taras</a>.
+	<a href="mailto:taras.judge@shaw.ca">Taras</a>.
 	</td>
       </tr>       
       <!-- End iRate -->      
@@ -50,8 +50,8 @@
         an ActiveX control.
 	</td>
 
-	<td>Submitted by <a href="mailto:gcj@lists.megacz.com">
-	Adam Megacz</a>.
+	<td>
+	<a href="mailto:gcj@lists.megacz.com">Adam Megacz</a>.
 	</td>
       </tr>       
       <!-- End XWT -->
@@ -80,7 +80,7 @@
 	    new USB standard for talking to such devices called PTP.
 	</td>
 	<td>
-	Submitted by <a href="mailto:david-b@pacbell.net">David Brownell</a>.
+	<a href="mailto:david-b@pacbell.net">David Brownell</a>.
 	</td>
       </tr>
       <!-- End jUSB/jPhoto -->
@@ -98,9 +98,8 @@
 	    code using GCJ.
 	</td>
 
-	<td>Submitted by
-	    <a href="mailto:strimmer@stat.uni-muenchen.de">
-	    Korbinian Strimmer</a>.
+	<td>
+	<a href="mailto:strimmer@stat.uni-muenchen.de">Korbinian Strimmer</a>.
 	</td>
       </tr>
       <!-- End PAL -->
@@ -120,7 +119,7 @@
 	    performance gains over Kaffe's jit3 were witnessed.
 	 </td>
 	 <td>
-	 Submitted by <a href="mailto:mgd@swarm.org">Marcus G. Daniel</a>.
+	 <a href="mailto:mgd@swarm.org">Marcus G. Daniel</a>.
 	 </td>
       </tr>
       <!-- End Swarm -->
@@ -138,9 +137,7 @@
 	    portability of services. It's written in Java and
 	    standardly built using gcj.
 	</td>
-	<td>Submitted by
-            <a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick
-            Gelas</a>.
+	<td><a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick Gelas</a>.
 	</td>
       </tr>
       <!-- End Tamanoir -->
@@ -180,8 +177,7 @@
 	    WebMiel, uses Tomcat and has been working with gcj since
 	    mid-2002.  The documentation is in French.
 	</td>
-	<td>Submitted by <a
-	    href="mailto:ch_roux@club-internet.fr">Christophe Roux</a>.
+	<td><a href="mailto:ch_roux@club-internet.fr">Christophe Roux</a>.
 	</td>
       </tr>
       <!-- End WebMiel -->
@@ -198,8 +194,7 @@
 href="http://www.freestyler-toolkit.org/freestyler/linux-kerneled-Gtk2.html#linux-ke
 rneled%2fGtk2">Screenshots</a> are here.
 	</td>
-	<td>Submitted by <a
-	    href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>.
+	<td><a href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>.
 	</td>
       </tr>
 
