Yet more cleanup.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -34,7 +34,7 @@
 	perhaps the most widely distributed GCJ-compiled program to date.
 	</td>
 	<td>
-	<a href="mailto:taras.judge@shaw.ca">Taras</a>.
+	<a href="mailto:taras.judge@shaw.ca">Taras</a>
 	</td>
       </tr>       
       <!-- End iRate -->      
@@ -51,7 +51,7 @@
 	</td>
 
 	<td>
-	<a href="mailto:gcj@lists.megacz.com">Adam Megacz</a>.
+	<a href="mailto:gcj@lists.megacz.com">Adam Megacz</a>
 	</td>
       </tr>       
       <!-- End XWT -->
@@ -80,7 +80,7 @@
 	    new USB standard for talking to such devices called PTP.
 	</td>
 	<td>
-	<a href="mailto:david-b@pacbell.net">David Brownell</a>.
+	<a href="mailto:david-b@pacbell.net">David Brownell</a>
 	</td>
       </tr>
       <!-- End jUSB/jPhoto -->
@@ -99,7 +99,7 @@
 	</td>
 
 	<td>
-	<a href="mailto:strimmer@stat.uni-muenchen.de">Korbinian Strimmer</a>.
+	<a href="mailto:strimmer@stat.uni-muenchen.de">Korbinian Strimmer</a>
 	</td>
       </tr>
       <!-- End PAL -->
@@ -137,7 +137,7 @@
 	    portability of services. It's written in Java and
 	    standardly built using gcj.
 	</td>
-	<td><a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick Gelas</a>.
+	<td><a href="mailto:jpgelas@lhpcm.univ-lyon1.fr">Jean Patrick Gelas</a>
 	</td>
       </tr>
       <!-- End Tamanoir -->
@@ -177,7 +177,7 @@
 	    WebMiel, uses Tomcat and has been working with gcj since
 	    mid-2002.  The documentation is in French.
 	</td>
-	<td><a href="mailto:ch_roux@club-internet.fr">Christophe Roux</a>.
+	<td><a href="mailto:ch_roux@club-internet.fr">Christophe Roux</a>
 	</td>
       </tr>
       <!-- End WebMiel -->
@@ -194,7 +194,7 @@
 href="http://www.freestyler-toolkit.org/freestyler/linux-kerneled-Gtk2.html#linux-ke
 rneled%2fGtk2">Screenshots</a> are here.
 	</td>
-	<td><a href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>.
+	<td><a href="mailto:erik.poupaert@skynet.be">Erik Poupaert</a>
 	</td>
       </tr>
 
