Further GCC 3.3.2 changes. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -924,6 +924,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR9631">9631</a> [hppa64-linux] gcc-3.3 fails to bootstrap</li>
 <li><a href="http://gcc.gnu.org/PR9877">9877</a> fixincludes makes a bad <code>sys/byteorder.h</code> on svr5 (UnixWare 7.1.1)</li>
 <li><a href="http://gcc.gnu.org/PR11687">11687</a> xstormy16-elf build fails in libf2c</li>
+<li><a href="http://gcc.gnu.org/PR12263">12263</a> [SGI IRIX] bootstrap fails during compile of <code>libf2c/libI77/backspace.c</code></li>
 <li><a href="http://gcc.gnu.org/PR12490">12490</a> buffer overflow in scan-<code>decls.c</code> (during Solaris 9 fix-header processing)</li>
 </ul>
 <h4>Internal compiler errors (multi-platform)</h4>
@@ -969,6 +970,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR12236">12236</a> regparm and fastcall messes up parameters</li>
 <li><a href="http://gcc.gnu.org/PR12266">12266</a> incorrect instantiation of unneeded template during overload resolution</li>
 <li><a href="http://gcc.gnu.org/PR12296">12296</a> istream::peek() doesn't set eofbit</li>
+<li><a href="http://gcc.gnu.org/PR12337">12337</a> apparently infinite loop in g++</li>
 <li><a href="http://gcc.gnu.org/PR12344">12344</a> stdcall attribute ignored if function returns a pointer</li>
 <li><a href="http://gcc.gnu.org/PR12451">12451</a> missing(late) class forward declaration in <code>cxxabi.h</code></li>
 <li><a href="http://gcc.gnu.org/PR12486">12486</a> g++ accepts invalid use of a qualified name</li>
