Document ColdFire in the spelling conventions.

--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -230,6 +230,11 @@ and code.  The following table lists some simple cases:</p>
     <td>"builtin" isn't a word</td>
   </tr>
   <tr>
+    <td>"ColdFire"</td>
+    <td>"coldfire" or "Coldfire"</td>
+    <td></td>
+  </tr>
+  <tr>
     <td>"dependent" (adjective), "dependence", "dependency"</td>
     <td>"dependant", "dependance", "dependancy"</td>
     <td></td>
