2003-10-12  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Conform to SGML standards and our coding
	conventions.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -39,14 +39,14 @@ adequate.</p>
 executables produced by the compiler.  Secondary goals include
 reasonable compile speed, a small memory foot print, and the ability
 to build a cross-compiler.</p>
-<p>A discussion on extensions we are thinking about providing is
-<a href="extensions.html">here</a>.</p>
+<p>We expect to provide the following
+<a href="extensions.html">language extensions</a>.</p>
 
 <h2>Status of compiler and run time library</h2>
-<p>You can find the current status of development of the compiler
-<a href="compilerstatus.html">here</a> and the status of development
-of the run time library <a href="librarystatus.html">here</a>.
-You will find a TODO list <a href="todo.html">here</a>.</p>
+<p>We regularly update the status of the
+<a href="compilerstatus.html">front end development</a> and the status
+of the <a href="librarystatus.html">run time library development</a>.
+We also keep a <a href="todo.html">TODO list</a>.</p>
 
 <h2>Contributing</h2>
 <p>We encourage everyone to <a href="../contribute.html">contribute changes</a>
@@ -62,7 +62,8 @@ available</a>.</p>
 use the compiler once you have built it (or downloaded the binary).</p>
 
 <h2>Suggested reading</h2>
-<p>Further links are provided <a href="links.html">here</a>.</p>
+<p>We provide links to some <a href="links.html">information</a> relevant to
+Fortran programmers.</p>
 
 
 <h2>News/Announcements</h2>
@@ -85,7 +86,7 @@ the <a href="http://gcc.gnu.org/cvs.html">GCC CVS repository</a>
 (announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">here</a>). This
 branch of GCC will become part of official GCC releases by the time
 GCC 3.5 is released. This web page and our mailing list will move to <a
-href="http://gcc.gnu.org">gcc.gnu.org</a> sometime soon.</b></dd>
+href="http://gcc.gnu.org">gcc.gnu.org</a> sometime soon.</dd>
 
 <dt><b>July 11, 2003</b></dt>
 <dd>The anonymous CVS server seems to get updated again, so please
