--- a/htdocs/fortran/compilerstatus.html
+++ b/htdocs/fortran/compilerstatus.html
@@ -69,7 +69,7 @@ include at least a beta version of G95 into GCC by this time.
 <a name="rb"><h2>Reporting Bugs</h2></a>
 If you think you found a bug, please report it to the G95 development
 list at <code><a
-href="mailto:gcc-g95@lists.sourceforge.net">gcc-g95@lists.sourceforge.net</a></code>.
+href="mailto:fortran@gcc.gnu.org">fortran@gcc.gnu.org</a></code>.
 Please include the information necessary to reproduce the bug,
 especially a minimal Fortran source that triggers the bug, information
 on your computer architecture and the version of G95 you're using
