--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -119,10 +119,10 @@
 	<pre>
 	template &lt;typename T&gt; void C&lt;T&gt;::g ()
 	{
-	  this->m = 0;
-	  this->f ();
-	  this->n = 0
-	  this->g ();
+	  this-&gt;m = 0;
+	  this-&gt;f ();
+	  this-&gt;n = 0
+	  this-&gt;g ();
 	}</pre></li>
 
     <li>The "named return value" and "implicit typename"
@@ -285,9 +285,16 @@
 <h2>New Targets and Target Specific Improvements</h2>
 
   <ul>
+    <li>Bernardo Innocenti (Develer&nbsp;S.r.l.) has contributed
+    the <code>m68k-uclinux</code> target, based on former work done
+    by Paul Dale (SnapGear&nbsp;Inc.).  Code generation for the
+    <code>ColdFire</code> processors family has been enhanced and extended
+    to support the MCF&nbsp;53xx and MCF&nbsp;54xx cores, integrating
+    former work done by Peter Barada (Motorola).</li>
+
     <li>Support for the Mitsubishi V850E1 processor has been added.
     This is a variant of the V850E processor with some additional
-    debugging instructions.  </li>
+    debugging instructions.</li>
     
     <li>Nicolas Pitre has contributed his hand-coded floating-point support
     code for ARM.  It is both significantly smaller and faster than the 
@@ -301,8 +308,8 @@
     line switch.</li>
     
     <li>A new ARM target has been added: <code>arm-wince-pe</code>.  This is
-    similar to the arm-pe target, but it defaults to using the APCS32
-    ABI.</li>
+    similar to the <code>arm-pe</code> target, but it defaults to using the
+    APCS32 ABI.</li>
 
     <li>The existing ARM pipeline description has been converted to
     the use the <a
@@ -356,7 +363,7 @@
       <li>the first word of the structure would have been passed in
 	  a register.</li>
     </ul>
-    Note that only big-endian n32 & n64 targets (such as IRIX 6) are
+    Note that only big-endian n32 &amp; n64 targets (such as IRIX 6) are
     affected.</li>
 
     <li>More processor configuration options for Xtensa processors are
