2003-10-13  Toon Moene  <toon@moene.indiv.nluug.nl>
	* links.html: Correct HTML and references of local pages.
	* usage.html: Ditto.
	* librarystatus.html: Ditto.
	* compilerstatus.html: Ditto.
	* index.html: Ditto.

--- a/htdocs/fortran/compilerstatus.html
+++ b/htdocs/fortran/compilerstatus.html
@@ -60,9 +60,8 @@ work as already been completed.</p>
 </p>
 
 <h2 id="be">Middleend and Backend</h2>
-G95 uses the middleend and backend of <a
-href="http://gcc.gnu.org">GCC</a>, more specifically, it is built on
-the <a href="http://gcc.gnu.org/projects/tree-ssa">Tree-SSA</a> branch
+G95 uses the middleend and backend of GCC, more specifically, it is built on
+the <a href="../projects/tree-ssa">Tree-SSA</a> branch
 of GCC which is meant to become part of GCC 3.5. We hope to be able to
 include at least a beta version of G95 into GCC by this time.
 
