--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -11,8 +11,7 @@
 
 <p>The GNU Fortran 95 project, or G95, is developing a Fortran 95
 compiler front end, as well as runtime libraries, for 
-<a href="http://gcc.gnu.org" target="_top">GCC</a>, the GNU Compiler
-Collection.  G95 development is a part of the
+GCC, the GNU Compiler Collection.  G95 development is a part of the
 <a href="http://www.gnu.org/">GNU Project</a>, aiming to bring free
 number crunching to all GNU system variants, including GNU/Linux.
 The G95 development effort uses an open development environment in
@@ -28,7 +27,7 @@ available to the Fortran community.</p>
 <p>You can reach us at the
 <a href="mailto:fortran@gcc.gnu.org">fortran@gcc.gnu.org</a>
 mailing list.  For subscribing to the mailing list, see
-<a href="http://gcc.gnu.org/ml">this page</a>.</p>
+<a href="../lists.html">this page</a>.</p>
 
 <h2>Project goal</h2>
 <p>We strive to provide a high quality release, which we want to work
@@ -81,12 +80,12 @@ possible.</dd>
 
 <dt><b>July 27, 2003</b></dt>
 <dd>gcc-g95 has been integrated into the <a
-href="http://gcc.gnu.org/projects/tree-ssa/">tree-ssa branch</a> of
-the <a href="http://gcc.gnu.org/cvs.html">GCC CVS repository</a>
+href="../projects/tree-ssa/">tree-ssa branch</a> of
+the <a href="../cvs.html">GCC CVS repository</a>
 (announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">here</a>). This
 branch of GCC will become part of official GCC releases by the time
-GCC 3.5 is released. This web page and our mailing list will move to <a
-href="http://gcc.gnu.org">gcc.gnu.org</a> sometime soon.</dd>
+GCC 3.5 is released. This web page and our mailing list will move to
+<a href="../index.html">gcc.gnu.org</a> sometime soon.</dd>
 
 <dt><b>July 11, 2003</b></dt>
 <dd>The anonymous CVS server seems to get updated again, so please
