--- a/htdocs/fortran/librarystatus.html
+++ b/htdocs/fortran/librarystatus.html
@@ -15,7 +15,7 @@
 
 
 <p>Everything breaks if the libgfor main(0 startup library isn't used. This
-should be fairly easy to fix using constructor functions.
+should be fairly easy to fix using constructor functions.</p>
 <p>Some formatted IO of integers.  The current implementation will silently 
 ignore many IO commands.</p>
 <p>The library is not thread-safe.  This will have to be fixed because OpenMP
