--- a/htdocs/fortran/usage.html
+++ b/htdocs/fortran/usage.html
@@ -29,7 +29,7 @@ written.
 </p>
 
 <p>
-G95 builds on <a href="http://gcc.gnu.org/">GCC</a>, and thus
+G95 builds on GCC, and thus
 shares most characteristics with it. If you know how to use GCC, there
 will not be much new information for you in this document. Especially,
 the options for optimization and the generation of debugging
@@ -82,7 +82,7 @@ needs. Therefore this section outlines other stuff the user might
 want to know. 
 </p>
 
-<a name="fixed"><h3>Compiling Fixed Form Sources</h3></a>
+<h3><a name="fixed">Compiling Fixed Form Sources</a></h3>
 <p>
 When <code>gfortran</code> is run on a file, whose name ends in <code>.f90</code> or
 <code>.f95</code>, g95 assumes a free form source file. If that file
@@ -92,7 +92,7 @@ of this option, and other options relating to fixed form vs. free form
 input are the same as in G77, and may be found in G77's documentation.
 </p>
 
-<a name="fname"><h3>Compiling Files Not Named <code>*.f9[05]</code></h3></a>
+<h3><a name="fname">Compiling Files Not Named <code>*.f9[05]</code></a></h3>
 <p>
 When running <code>gfortran</code> one actually doesn't run the compiler,
 but the compiler driver. This driver interprets the command
@@ -126,7 +126,7 @@ be explicitly given. This may be done by the command line options
 described above, which may also be used to override these rules.
 </p>
 
-<a name="g77"><h3>Compatibility with G77</h3></a>
+<h3><a name="g77">Compatibility with G77</a></h3>
 <p>
 In order to efficiently implement the passing of array sections,
 binary compatibility to Fortran 77 had to be abandoned. If the user
@@ -147,7 +147,7 @@ the libraries of both compilers, i.e. <code>-lgfortran</code> for G95,
 <code>-lg2c</code> for G77.
 </p>
 
-<a name="fend"><h3>Running the Compiler Frontend</h3></a>
+<h3><a name="fend">Running the Compiler Frontend</a></h3>
 <p>
 One may use G95 as a syntax checker (or verify that G95's frontend
 correctly accepts/rejects a program), by specifying
