Note eight more bug fixes. By Joe Buck <jbuck@synopsys.com>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -907,7 +907,7 @@ here).</p>
 <hr />
 <h2><a name="3.3.2">GCC 3.3.2</a></h2>
 
-<p><i>Oct. 8, 2003: This section is preliminary, as 3.3.2 has not yet
+<p><i>Oct. 14, 2003: This section is preliminary, as 3.3.2 has not yet
 been officially released.</i></p>
 
 <h3>Bug Fixes</h3>
@@ -921,6 +921,7 @@ not listed here).</p>
 <h4>Bootstrap failures and problems</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR8336">8336</a> [SCO5] bootstrap config still tries to use COFF options</li>
+<li><a href="http://gcc.gnu.org/PR9330">9330</a> [alpha-osf] Bootstrap failure on Compaq Tru64 with <code>--enable-threads</code>=posix</li>
 <li><a href="http://gcc.gnu.org/PR9631">9631</a> [hppa64-linux] gcc-3.3 fails to bootstrap</li>
 <li><a href="http://gcc.gnu.org/PR9877">9877</a> fixincludes makes a bad <code>sys/byteorder.h</code> on svr5 (UnixWare 7.1.1)</li>
 <li><a href="http://gcc.gnu.org/PR11687">11687</a> xstormy16-elf build fails in libf2c</li>
@@ -930,17 +931,21 @@ not listed here).</p>
 <h4>Internal compiler errors (multi-platform)</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR7277">7277</a> Casting integers to vector types causes ICE</li>
+<li><a href="http://gcc.gnu.org/PR11063">11063</a> (c++) ICE on parsing initialization list of <code>const</code> array member</li>
 <li><a href="http://gcc.gnu.org/PR11207">11207</a> ICE with negative index in array element designator</li>
 <li><a href="http://gcc.gnu.org/PR11522">11522</a> (fortran) g77 dwarf-2 ICE in <code>add_abstract_origin_attribute</code> </li>
 <li><a href="http://gcc.gnu.org/PR11595">11595</a> (c++) ICE on duplicate label definition</li>
 <li><a href="http://gcc.gnu.org/PR11646">11646</a> (c++) ICE in <code>commit_one_edge_insertion</code> with <code>-fnon-call-exceptions</code> <code>-fgcse</code> <code>-O</code></li>
 <li><a href="http://gcc.gnu.org/PR11665">11665</a> ICE in <code><code>struct</code></code> initializer when taking address</li>
 <li><a href="http://gcc.gnu.org/PR11852">11852</a> (c++) ICE with bad <code>struct</code> initializer.</li>
+<li><a href="http://gcc.gnu.org/PR11878">11878</a> (c++) ICE in <code>cp_expr_size</code></li>
 <li><a href="http://gcc.gnu.org/PR11883">11883</a> ICE with any <code>-O</code> on mercury-generated C code</li>
 <li><a href="http://gcc.gnu.org/PR11991">11991</a> (c++) ICE in <code>cxx_incomplete_type_diagnostic</code>, in <code>cp/typeck2.c</code> when applying typeid operator to template template parameter</li>
 <li><a href="http://gcc.gnu.org/PR12146">12146</a> ICE in <code>lookup_template_function</code>, in <code>cp/pt.c</code></li>
 <li><a href="http://gcc.gnu.org/PR12215">12215</a> ICE in <code>make_label_edge</code> with <code>-fnon-call-exceptions</code> <code>-fno-gcse</code> <code>-O2</code></li>
 <li><a href="http://gcc.gnu.org/PR12446">12446</a> ICE in <code>emit_move_insn</code> on complicated array reference</li>
+<li><a href="http://gcc.gnu.org/PR12510">12510</a> ICE in <code>final_scan_insn</code></li>
+<li><a href="http://gcc.gnu.org/PR12544">12544</a> ICE with large parameters used in nested functions</li>
 </ul>
 <h4>C and optimization bugs</h4>
 <ul>
@@ -948,6 +953,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR10962">10962</a> lookup_field is a linear search on a linked list (can be slow if large <code>struct</code>)</li>
 <li><a href="http://gcc.gnu.org/PR11370">11370</a> <code>-Wunreachable-code</code> gives false complaints</li>
 <li><a href="http://gcc.gnu.org/PR11637">11637</a> invalid assembly with <code>-fnon-call-exceptions</code></li>
+<li><a href="http://gcc.gnu.org/PR11885">11885</a> Problem with bitfields in packed structs</li>
 <li><a href="http://gcc.gnu.org/PR12082">12082</a> Inappropriate unreachable code warnings</li>
 <li><a href="http://gcc.gnu.org/PR12180">12180</a> Inline optimization fails for variadic function</li>
 <li><a href="http://gcc.gnu.org/PR12340">12340</a> loop unroller + gcse produces wrong code</li>
@@ -992,7 +998,9 @@ not listed here).</p>
 </ul>
 <h4>PowerPC-specific</h4>
 <ul>
+<li><a href="http://gcc.gnu.org/PR11087">11087</a> [powerpc64-linux] GCC miscompiles <code>raid1.c</code> from linux kernel</li>
 <li><a href="http://gcc.gnu.org/PR11319">11319</a> loop miscompiled on ppc32</li>
+<li><a href="http://gcc.gnu.org/PR11949">11949</a> ICE Compiler segfault with ffmpeg <code>-maltivec</code> code</li>
 </ul>
 <h4>SPARC-specific</h4>
 <ul>
