Document new keyword "meta-bug" in "Procedures and Policies" section.

--- a/htdocs/bugs/management.html
+++ b/htdocs/bugs/management.html
@@ -207,6 +207,13 @@ severity "<strong>critical</strong>" to bring it to attention. It may
 be downgraded later if a defect is not important enough to justify
 "critical" severity.</p>
 
+<p><strong>Meta-bugs (reports with the keyword "meta-bug")</strong> are
+used to group PRs that have a common denominator.  Meta-bugs do not have
+testcases of their own, but provide links to regular PRs via Bugzilla's
+"depends on/blocks" mechanism instead: they depend on the regular PRs.
+Information concerning the majority of bugs blocking a meta-bug should
+be added to the meta-bug instead of each single PR.</p>
+
 <p><strong>Bugs with keyword "ice-on-invalid-code"</strong>, where GCC
 emits a sensible error message before issuing an ICE (the ICE will be
 replaced by the message "confused by earlier errors, bailing out" in
