2003-10-15  Toon Moene  <toon@moene.indiv.nluug.nl>
	* extensions.html: Remove <p> ... </p> around <ul> ... </ul>.
	* compilerstatus.html: Ditto.

--- a/htdocs/fortran/compilerstatus.html
+++ b/htdocs/fortran/compilerstatus.html
@@ -51,13 +51,12 @@ frontend and translate it to the GENERIC form required by the GCC
 backend. Work is ongoing in these parts of G95, but a large part of this
 work as already been completed.</p>
 
-<p>Current issues being worked on include:
+Current issues being worked on include:
 <ul>
 <li>Handling of <code>CHARACTER</code> variables in
 <code>COMMON</code> blocks</li>
 <li>Nested calls to functions returning arrays, e.g. <code>TRANSPOSE(TRANSPOSE(A(:,:))</code></li>
 </ul>
-</p>
 
 <h2 id="be">Middleend and Backend</h2>
 G95 uses the middleend and backend of GCC, more specifically, it is built on
