--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -963,6 +963,8 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR3907">3907</a> nested template parameter collides with member name</li>
 <li><a href="http://gcc.gnu.org/PR5293">5293</a> confusing message when binding a temporary to a reference</li>
 <li><a href="http://gcc.gnu.org/PR5296">5296</a> [DR115] Pointers to functions and to template functions behave differently in deduction</li>
+<li><a href="http://gcc.gno.org/PR7939">7939</a> ICE on function
+template specialization</li>
 <li><a href="http://gcc.gnu.org/PR8656">8656</a> Unable to assign function with <code>__attribute__</code> and pointer return type to an appropriate variable</li>
 <li><a href="http://gcc.gnu.org/PR10147">10147</a> Confusing error message for invalid template function argument</li>
 <li><a href="http://gcc.gnu.org/PR11400">11400</a> std::search_n() makes assumptions about Size parameter</li>
@@ -976,6 +978,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR12236">12236</a> regparm and fastcall messes up parameters</li>
 <li><a href="http://gcc.gnu.org/PR12266">12266</a> incorrect instantiation of unneeded template during overload resolution</li>
 <li><a href="http://gcc.gnu.org/PR12296">12296</a> istream::peek() doesn't set eofbit</li>
+<li><a href="http://gcc.gnu.org/PR12369">12369</a> ICE ith templates and friends</li>
 <li><a href="http://gcc.gnu.org/PR12337">12337</a> apparently infinite loop in g++</li>
 <li><a href="http://gcc.gnu.org/PR12344">12344</a> stdcall attribute ignored if function returns a pointer</li>
 <li><a href="http://gcc.gnu.org/PR12451">12451</a> missing(late) class forward declaration in <code>cxxabi.h</code></li>
