--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -885,6 +885,10 @@ here).</p>
 <ul>
 <li><a href="http://gcc.gnu.org/PR8787">8787</a> GCC fails to emit .intel_syntax when invoked with <code>-masm</code>=intel on DJGPP</li>
 </ul>
+<h4>Darwin (and MacOS X) specific</h4>
+<ul>
+<li><a href="http://gcc.gnu.org/PR10900">10900</a> trampolines crash</li>
+</ul>
 <h4>Documentation</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR1607">1607</a> (c++) Format attributes on methods undocumented</li>
@@ -931,6 +935,7 @@ not listed here).</p>
 <h4>Internal compiler errors (multi-platform)</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR7277">7277</a> Casting integers to vector types causes ICE</li>
+<li><a href="http://gcc.gnu.org/PR7939">7939</a> (c++) ICE on invalid function template specialization</li>
 <li><a href="http://gcc.gnu.org/PR11063">11063</a> (c++) ICE on parsing initialization list of <code>const</code> array member</li>
 <li><a href="http://gcc.gnu.org/PR11207">11207</a> ICE with negative index in array element designator</li>
 <li><a href="http://gcc.gnu.org/PR11522">11522</a> (fortran) g77 dwarf-2 ICE in <code>add_abstract_origin_attribute</code> </li>
@@ -943,6 +948,7 @@ not listed here).</p>
 <li><a href="http://gcc.gnu.org/PR11991">11991</a> (c++) ICE in <code>cxx_incomplete_type_diagnostic</code>, in <code>cp/typeck2.c</code> when applying typeid operator to template template parameter</li>
 <li><a href="http://gcc.gnu.org/PR12146">12146</a> ICE in <code>lookup_template_function</code>, in <code>cp/pt.c</code></li>
 <li><a href="http://gcc.gnu.org/PR12215">12215</a> ICE in <code>make_label_edge</code> with <code>-fnon-call-exceptions</code> <code>-fno-gcse</code> <code>-O2</code></li>
+<li><a href="http://gcc.gnu.org/PR12369">12369</a> (c++) ICE with templates and friends</li>
 <li><a href="http://gcc.gnu.org/PR12446">12446</a> ICE in <code>emit_move_insn</code> on complicated array reference</li>
 <li><a href="http://gcc.gnu.org/PR12510">12510</a> ICE in <code>final_scan_insn</code></li>
 <li><a href="http://gcc.gnu.org/PR12544">12544</a> ICE with large parameters used in nested functions</li>
@@ -978,8 +984,10 @@ template specialization</li>
 <li><a href="http://gcc.gnu.org/PR12236">12236</a> regparm and fastcall messes up parameters</li>
 <li><a href="http://gcc.gnu.org/PR12266">12266</a> incorrect instantiation of unneeded template during overload resolution</li>
 <li><a href="http://gcc.gnu.org/PR12296">12296</a> istream::peek() doesn't set eofbit</li>
+<li><a href="http://gcc.gnu.org/PR12298">12298</a> [sjlj exceptions] Stack unw
 <li><a href="http://gcc.gnu.org/PR12369">12369</a> ICE ith templates and friends</li>
 <li><a href="http://gcc.gnu.org/PR12337">12337</a> apparently infinite loop in g++</li>
+ind destroys not-yet-constructed object</li>
 <li><a href="http://gcc.gnu.org/PR12344">12344</a> stdcall attribute ignored if function returns a pointer</li>
 <li><a href="http://gcc.gnu.org/PR12451">12451</a> missing(late) class forward declaration in <code>cxxabi.h</code></li>
 <li><a href="http://gcc.gnu.org/PR12486">12486</a> g++ accepts invalid use of a qualified name</li>
@@ -1014,10 +1022,6 @@ template specialization</li>
 <h4>Alpha-specific</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR11717">11717</a> [alpha-linux] unrecognizable insn compiling <code>for.c</code> of kernel 2.4.22-pre8</li>
-</ul>
-<h4>Darwin (and MacOS X) specific</h4>
-<ul>
-<li><a href="http://gcc.gnu.org/PR10900">10900</a> trampolines crash</li>
 </ul>
 <h4>HPUX-specific</h4>
 <ul>
